[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-manager-pymodule"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
    "dbus-python==1.3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["network_module*"]
